--- a/gh-focus/config.json.sample
+++ b/gh-focus/config.json.sample
@@ -1,7 +1,3 @@
-# Sample configuration for testing gh-focus
-# This file will be auto-generated when you run the tool
-# You can manually edit this to add channels quickly
-
 {
     "coding": [
         {
@@ -11,12 +7,42 @@
         {
             "name": "Traversy Media",
             "id": "UC29ju8bIPH5as8OGnQzwJyA"
+        },
+        {
+            "name": "Web Dev Simplified",
+            "id": "UCFbNIlppjreqWp0LoG4qLDg"
+        },
+        {
+            "name": "The Net Ninja",
+            "id": "UCW5YeuERMlsx2D7KtykVbVA"
         }
     ],
     "business": [
         {
             "name": "Y Combinator",
             "id": "UCcefcZRL2oaA_uBNeo5UOWg"
+        },
+        {
+            "name": "Ali Abdaal",
+            "id": "UCoOae5nYzcosPVc4DescXIQ"
+        },
+        {
+            "name": "MeetKevin",
+            "id": "UCdWjx1aWCM6iB2lt-dEKD8w"
+        }
+    ],
+    "learning": [
+        {
+            "name": "3Blue1Brown",
+            "id": "UCYO_jab_esuFRV4b0cTApqQ"
+        },
+        {
+            "name": "Kurzgesagt",
+            "id": "UCzIL6qFP00w10hgxZwplZww"
+        },
+        {
+            "name": "Veritasium",
+            "id": "UCHnyfMoQyNFhjVwF1nHV28w"
         }
     ],
     "entertainment": []
