--- a/gh-focus/extension.yml
+++ b/gh-focus/extension.yml
@@ -2,3 +2,4 @@ name: focus
 version: 1.0.0
 description: A distraction-free developer learning environment.
 url: https://github.com/Pakeeza1508/gh-focus
+exec: gh-focus
