Update gh-focus submodule: add LICENSE, screenshot, and README enhancements

--- a/gh-focus/config.json
+++ b/gh-focus/config.json
@@ -111,10 +111,6 @@
             "id": "UCBwmMxybNva6P_5_j85m7QA"
         },
         {
-            "name": "Kevin Powell",
-            "id": "UCJZv4d51b5a74Se57ChanCg"
-        },
-        {
             "name": "Programming with Mosh",
             "id": "UCWv7vMbMWH4-V0ZXdmDpPBA"
         },
@@ -487,11 +483,5 @@
             "id": "UCLA_DiR1FfKNvjuUpBHmylQ"
         }
     ],
-    "gist_id": "a35a00fe2266cf2178c43501c6c2b640",
-    "my_channels": [
-        {
-            "name": "raj shamani",
-            "id": "UCzwCEE_PchiBUMnA3qhGVg"
-        }
-    ]
+    "gist_id": "582bf8fb9f06c81597634b359441c708"
 }
